--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<nav class="navbar navbar-expand-lg ">
-  							<a class="navbar-brand logo-width" href="#"><img src="images/Logo.png"></a>
+  							<a class="navbar-brand logo-width" href="#"><img src="images/logo.png"></a>
   							<button class="navbar-toggler custom-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     						<span class="navbar-toggler-icon"><i class="fa fa-navicon fa-lg bars"></i></span>
   							</button>
